[package]
name = "onlyweb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["catch-panic"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
validator = { version = "0.20.0", features = ["derive"] }
